feat(service-auth): receive HRMS activations
